[tool.poetry]
name = "python-bit"
version = "0.1.0"
description = "Python API connector for Bit.com exchange"
authors = ["Jan Skoda <skoda@jskoda.cz>"]
license = "MIT"
packages = [
    {include = "bit"}
]

[tool.poetry.dependencies]
python = "^3.10"
aiosonic = "^0.16.1"
ujson = "^5.7.0"
websockets = "^11.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
